@@ -14,26 +14,11 @@ CDatagram::~CDatagram()
 {
 }
 
-const Datagram& CDatagram::datagram() const
-{
-  return _datagram;
-}
-
-Datagram& CDatagram::datagram()
-{
-  return _datagram;
-}
-
-Datagram& CDatagram::dg()
-{
-  return _datagram;
-}
-
 bool CDatagram::insert(const Xtc& tc, const void* payload)
 {
   int payloadsiz = tc.extent - sizeof(Xtc);
-  memcpy(_datagram.xtc.alloc(sizeof(Xtc)), &tc, sizeof(Xtc));
-  memcpy(_datagram.xtc.alloc(payloadsiz), payload, payloadsiz);
+  memcpy(xtc.alloc(sizeof(Xtc)), &tc, sizeof(Xtc));
+  memcpy(xtc.alloc(payloadsiz), payload, payloadsiz);
   return true;
 }
 
@@ -51,12 +36,12 @@ int CDatagram::unblock(OobServer& srv, char* msg)
 {
   //  We need to reconstitute the vtable at the other end of the unblock.
   return srv.unblock(msg, const_cast<char*>(reinterpret_cast<const char*>(this)),
-		     _datagram.xtc.sizeofPayload()+sizeof(*this));
+		     xtc.sizeofPayload()+sizeof(*this));
 }
 
 InDatagramIterator* CDatagram::iterator(Pool* pool) const
 {
-  return new (pool) CDatagramIterator(_datagram);
+  return new (pool) CDatagramIterator(*this);
 }
 
 TrafficDst* CDatagram::traffic(const Ins& dst)
